dynamic .well-known/farcaster.json

--- a/turbo.json
+++ b/turbo.json
@@ -23,7 +23,8 @@
     "TENDERLY_USER",
     "TENDERLY_PROJECT",
     "TENDERLY_ACCESS_KEY",
-    "NODE_ENV"
+    "NODE_ENV",
+    "VERCEL_PROJECT_PRODUCTION_URL"
   ],
   "tasks": {
     "build": {
