fixed redis url + etherscan api key + farcaster.json

--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,7 @@
   ],
   "globalEnv": [
     "PINATA_API_KEY",
-    "PRIVATE_REDIS_CONNECTION_URI",
+    "REDIS_URL",
     "ETHERSCAN_API_KEY",
     "NEXT_PUBLIC_UPLOAD_API",
     "NEXT_PUBLIC_IPFS_UPLOAD_API",
