feat: add delegate and voter info to subgraph

--- a/apps/subgraph/package.json
+++ b/apps/subgraph/package.json
@@ -5,14 +5,8 @@
     "clean": "rm -rf ./generated ./build subgraph.yaml",
     "build:subgraph": "graph build",
     "codegen": "graph codegen",
-    "prepare:ethereum-sepolia": "mustache config/sepolia.json subgraph.yaml.mustache > subgraph.yaml",
-    "prepare:ethereum": "mustache config/ethereum.json subgraph.yaml.mustache > subgraph.yaml",
-    "prepare:base": "mustache config/base.json subgraph.yaml.mustache > subgraph.yaml",
-    "prepare:base-sepolia": "mustache config/base-sepolia.json subgraph.yaml.mustache > subgraph.yaml",
-    "prepare:optimism": "mustache config/optimism.json subgraph.yaml.mustache > subgraph.yaml",
-    "prepare:optimism-sepolia": "mustache config/optimism-sepolia.json subgraph.yaml.mustache > subgraph.yaml",
-    "prepare:zora": "mustache config/zora.json subgraph.yaml.mustache > subgraph.yaml",
-    "prepare:zora-sepolia": "mustache config/zora-sepolia.json subgraph.yaml.mustache > subgraph.yaml",
+    "deploy:only": "bash ./scripts/deploy.sh",
+    "deploy:subgraph": "pnpm clean && pnpm deploy:only",
     "create:local": "graph local http://localhost:8020/ nouns-builder",
     "local-node": "docker compose up",
     "remove:local": "graph remove --node http://localhost:8020/ nouns-builder",
