--- a/apps/web/codegen.yml
+++ b/apps/web/codegen.yml
@@ -1,6 +1,6 @@
 generates:
   src/data/subgraph/sdk.generated.ts:
-    schema: 'https://api.goldsky.com/api/public/project_cm33ek8kjx6pz010i2c3w8z25/subgraphs/nouns-builder-ethereum-mainnet/latest/gn'
+    schema: 'https://api.goldsky.com/api/public/project_cm33ek8kjx6pz010i2c3w8z25/subgraphs/nouns-builder-ethereum-sepolia/0.1.0/gn'
     documents: 'src/data/subgraph/**/*.graphql'
     plugins:
       - typescript
