--- a/turbo.json
+++ b/turbo.json
@@ -14,6 +14,8 @@
     "NEXT_PUBLIC_SENTRY_DSN",
     "NEXT_PUBLIC_NETWORK_TYPE",
     "NEXT_PUBLIC_VERCEL_ENV",
+    "NEXT_PUBLIC_ALCHEMY_API_KEY",
+    "NEXT_PUBLIC_INFURA_API_KEY",
     "SENTRY_DSN",
     "SENTRY_ORG",
     "SENTRY_PROJECT",
