--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -33,6 +33,7 @@
     "@vercel/og": "^0.6.8",
     "@zoralabs/nouns-protocol": "1.2.0",
     "@zoralabs/zord": "workspace:*",
+    "alchemy-sdk": "^3.6.0",
     "analytics": "workspace:*",
     "axios": "^1.9.0",
     "bignumber.js": "^9.3.0",
