--- a/apps/web/.env.local.example
+++ b/apps/web/.env.local.example
@@ -7,6 +7,7 @@ PRIVATE_REDIS_CONNECTION_URI=
 
 NEXT_PUBLIC_INFURA_API_KEY=
 NEXT_PUBLIC_ALCHEMY_API_KEY=
+NEXT_PUBLIC_COINGECKO_API_KEY=
 NEXT_PUBLIC_TENDERLY_RPC_KEY=
 
 NEXT_PUBLIC_NETWORK_TYPE=mainnet/testnet
