feat: support walletconnect proposal type

--- a/apps/web/.env.local.example
+++ b/apps/web/.env.local.example
@@ -17,3 +17,6 @@ TENDERLY_PROJECT=
 TENDERLY_USER=
 
 PINATA_API_KEY=
+
+NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
+NEXT_PUBLIC_WALLET_CONNECT_METADATA=
