--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
     "@fontsource/inter": "5.2.5",
     "@fontsource/londrina-solid": "^5.2.5",
     "@rainbow-me/rainbowkit": "^2.2.5",
+    "@reown/walletkit": "^1.2.8",
     "@sentry/nextjs": "^9.22.0",
     "@smartinvoicexyz/types": "^0.1.27",
     "@tanstack/react-query": "^5.76.1",
@@ -31,6 +32,9 @@
     "@vanilla-extract/next-plugin": "^2.4.11",
     "@vanilla-extract/recipes": "^0.5.5",
     "@vercel/og": "^0.6.8",
+    "@walletconnect/core": "^2.21.4",
+    "@walletconnect/utils": "^2.21.4",
+    "@walletconnect/types": "^2.21.4",
     "@zoralabs/nouns-protocol": "1.2.0",
     "@zoralabs/zord": "workspace:*",
     "alchemy-sdk": "^3.6.0",
