--- a/apps/web/.env.local.example
+++ b/apps/web/.env.local.example
@@ -17,6 +17,7 @@ TENDERLY_PROJECT=
 TENDERLY_USER=
 
 PINATA_API_KEY=
+NEXT_PUBLIC_PINATA_GATEWAY=
 
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
 NEXT_PUBLIC_WALLET_CONNECT_METADATA=
