refactor: move layers constants to package

--- a/turbo.json
+++ b/turbo.json
@@ -17,6 +17,8 @@
     "NEXT_PUBLIC_ALCHEMY_API_KEY",
     "NEXT_PUBLIC_INFURA_API_KEY",
     "NEXT_PUBLIC_GOLDSKY_PROJECT_ID",
+    "NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID",
+    "NEXT_PUBLIC_WALLET_CONNECT_METADATA",
     "SENTRY_DSN",
     "SENTRY_ORG",
     "SENTRY_PROJECT",
