fix: fixed app build with hoisted wagmi dep

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,6 @@
 auto-install-peers = true
 shared-workspace-lockfile = true
+dedupe-peer-dependents=true
+resolve-peers-from-workspace-root=true
+strict-peer-dependencies=false
+hoist=true
