fix: fixed build + reduces package size

--- a/packages/constants/package.json
+++ b/packages/constants/package.json
@@ -25,6 +25,11 @@
       "require": "./dist/*.js"
     }
   },
+  "files": [
+    "dist/**/*",
+    "!dist/**/*.test.*",
+    "!dist/**/*.spec.*"
+  ],
   "license": "MIT",
   "main": "./dist/index.js",
   "peerDependencies": {
