--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -16,6 +16,11 @@
       "require": "./dist/index.js"
     }
   },
+  "files": [
+    "dist/**/*",
+    "!dist/**/*.test.*",
+    "!dist/**/*.spec.*"
+  ],
   "license": "MIT",
   "main": "./dist/index.js",
   "peerDependencies": {
