--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -32,6 +32,11 @@
       "require": "./dist/*.js"
     }
   },
+  "files": [
+    "dist/**/*",
+    "!dist/**/*.test.*",
+    "!dist/**/*.spec.*"
+  ],
   "license": "MIT",
   "main": "./dist/index.js",
   "peerDependencies": {
