--- a/packages/blocklist/tsconfig.json
+++ b/packages/blocklist/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "@buildeross/tsconfig/react-library.json",
+  "compilerOptions": {
+    "lib": ["dom", "ES2020"],
+    "types": ["node"]
+  },
   "include": ["."],
   "exclude": ["dist", "build", "node_modules"]
 }
