--- a/packages/ipfs-service/package.json
+++ b/packages/ipfs-service/package.json
@@ -16,11 +16,24 @@
     "@buildeross/tsconfig": "workspace:*",
     "@types/sha.js": "^2.4.4",
     "eslint": "8.57.1",
+    "tsup": "^8.3.5",
     "typescript": "^5.8.3",
     "vitest": "^3.1.4"
   },
   "license": "MIT",
-  "main": "./index.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
+  },
+  "files": [
+    "dist/**/*",
+    "!dist/**/*.test.*",
+    "!dist/**/*.spec.*"
+  ],
+  "main": "./dist/index.js",
   "publishConfig": {
     "access": "public"
   },
@@ -30,8 +43,12 @@
     "directory": "packages/ipfs-service"
   },
   "scripts": {
-    "lint": "eslint *.ts* --fix",
-    "test": "vitest run"
+    "build": "tsup",
+    "clean": "rm -rf dist",
+    "dev": "tsup --watch",
+    "lint": "eslint src --fix",
+    "test": "vitest run",
+    "type-check": "tsc --noEmit"
   },
-  "types": "./index.ts"
+  "types": "./dist/index.d.ts"
 }
