feat: support animated gifs

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,7 +38,17 @@
     "dayjs": "^1.11.13",
     "flatpickr": "^4.6.13",
     "framer-motion": "^12.12.1",
+    "frog": "^0.18.3",
+    "gifenc": "^1.0.3",
+    "graphql": "^16.11.0",
+    "graphql-request": "^7.1.2",
+    "graphql-tag": "^2.12.6",
+    "hono": "^4.7.10",
+    "html-react-parser": "^5.2.5",
     "ioredis": "^5.8.1",
+    "lanyard": "^1.1.2",
+    "lodash": "^4.17.21",
+    "multiformats": "^13.3.6",
     "next": "^15.5.7",
     "nextjs-progressbar": "^0.0.16",
     "react": "^19.2.1",
