--- a/packages/ipfs-service/package.json
+++ b/packages/ipfs-service/package.json
@@ -3,7 +3,7 @@
   "description": "IPFS client and utilities for BuilderOSS apps",
   "version": "0.1.3",
   "dependencies": {
-    "multiformats": "^13.3.6",
+    "@biglup/is-cid": "^1.0.3",
     "sha.js": "^2.4.12"
   },
   "devDependencies": {
