--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,10 +12,10 @@
     "@buildeross/zord": "workspace:*",
     "@vanilla-extract/css": "^1.17.2",
     "@vanilla-extract/recipes": "^0.5.7",
-    "flatpickr": "^4.6.13",
     "react-markdown": "^10.1.0",
-    "react-mde": "^11.5.0",
     "react-portal": "^4.3.0",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
@@ -63,10 +63,12 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "peerDependencies": {
+    "flatpickr": "^4.6.13",
     "formik": "^2.4.6",
     "framer-motion": "^12.12.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-mde": "^11.5.0",
     "viem": "^2.30.0",
     "wagmi": "^2.15.4"
   },
