--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@buildeross/tsconfig/base.json",
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "outDir": "./dist",
     "declaration": true,
     "declarationMap": true,
