feat: export individual components in ui package

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -52,7 +52,12 @@
       "import": "./dist/styles.mjs",
       "require": "./dist/styles.js"
     },
-    "./index.css": "./dist/index.css"
+    "./index.css": "./dist/index.css",
+    "./*": {
+      "types": "./dist/*.d.ts",
+      "import": "./dist/*.mjs",
+      "require": "./dist/*.js"
+    }
   },
   "files": [
     "dist/**/*",
