--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -2,15 +2,14 @@
   "name": "@buildeross/analytics",
   "description": "Shared analytics for BuilderOSS apps",
   "version": "0.1.3",
+  "dependencies": {
+    "@vercel/analytics": "^0.1.5"
+  },
   "devDependencies": {
     "@buildeross/eslint-config-custom": "workspace:*",
     "@buildeross/tsconfig": "workspace:*",
     "@types/react": "^19.1.5",
-    "@vercel/analytics": "^0.1.5",
     "eslint": "8.57.1",
-    "next": "^15.3.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
     "tsup": "^8.3.5",
     "typescript": "^5.8.3"
   },
@@ -31,7 +30,8 @@
   "module": "./dist/index.mjs",
   "peerDependencies": {
     "next": "^15.3.2",
-    "react": "^19.1.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "publishConfig": {
     "access": "public"
