--- a/packages/constants/package.json
+++ b/packages/constants/package.json
@@ -2,9 +2,6 @@
   "name": "@buildeross/constants",
   "description": "Shared constants and configuration for BuilderOSS apps",
   "version": "0.1.3",
-  "dependencies": {
-    "@buildeross/types": "workspace:*"
-  },
   "devDependencies": {
     "@buildeross/eslint-config-custom": "workspace:*",
     "@buildeross/tsconfig": "workspace:*",
@@ -34,6 +31,7 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "peerDependencies": {
+    "@buildeross/types": "workspace:*",
     "wagmi": "^2.15.4"
   },
   "publishConfig": {
