--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -3,11 +3,6 @@
   "description": "Shared React hooks for BuilderOSS apps",
   "version": "0.1.3",
   "dependencies": {
-    "@buildeross/constants": "workspace:*",
-    "@buildeross/ipfs-service": "workspace:*",
-    "@buildeross/sdk": "workspace:*",
-    "@buildeross/types": "workspace:*",
-    "@buildeross/utils": "workspace:*",
     "dayjs": "^1.11.13"
   },
   "devDependencies": {
@@ -41,6 +36,11 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "peerDependencies": {
+    "@buildeross/constants": "0.1.3",
+    "@buildeross/ipfs-service": "0.1.3",
+    "@buildeross/sdk": "0.1.3",
+    "@buildeross/types": "0.1.3",
+    "@buildeross/utils": "0.1.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "swr": "^2.3.3",
