--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -3,9 +3,6 @@
   "description": "SDK for interacting with Nouns Builder contracts and subgraphs",
   "version": "0.1.3",
   "dependencies": {
-    "@buildeross/constants": "workspace:*",
-    "@buildeross/types": "workspace:*",
-    "@buildeross/utils": "workspace:*",
     "graphql": "^16.11.0",
     "graphql-request": "^7.1.2",
     "graphql-tag": "^2.12.6"
@@ -58,6 +55,9 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "peerDependencies": {
+    "@buildeross/constants": "0.1.3",
+    "@buildeross/types": "0.1.3",
+    "@buildeross/utils": "0.1.3",
     "@sentry/nextjs": "^9.22.0",
     "viem": "^2.30.0",
     "wagmi": "^2.15.4"
