--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,13 +3,6 @@
   "description": "Comprehensive UI components library for BuilderOSS apps",
   "version": "0.1.0",
   "dependencies": {
-    "@buildeross/constants": "workspace:*",
-    "@buildeross/hooks": "workspace:*",
-    "@buildeross/ipfs-service": "workspace:*",
-    "@buildeross/sdk": "workspace:*",
-    "@buildeross/types": "workspace:*",
-    "@buildeross/utils": "workspace:*",
-    "@buildeross/zord": "workspace:*",
     "@vanilla-extract/css": "^1.17.2",
     "@vanilla-extract/recipes": "^0.5.7",
     "react-markdown": "^10.1.0",
@@ -68,6 +61,13 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "peerDependencies": {
+    "@buildeross/constants": "0.1.3",
+    "@buildeross/hooks": "0.1.3",
+    "@buildeross/ipfs-service": "0.1.3",
+    "@buildeross/sdk": "0.1.3",
+    "@buildeross/types": "0.1.3",
+    "@buildeross/utils": "0.1.3",
+    "@buildeross/zord": "0.1.3",
     "flatpickr": "^4.6.13",
     "formik": "^2.4.6",
     "framer-motion": "^12.12.1",
