--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -3,9 +3,6 @@
   "description": "Shared utilities and helper functions for BuilderOSS apps",
   "version": "0.1.3",
   "dependencies": {
-    "@buildeross/constants": "workspace:*",
-    "@buildeross/ipfs-service": "workspace:*",
-    "@buildeross/types": "workspace:*",
     "bignumber.js": "^9.3.0",
     "tinycolor2": "^1.4.2"
   },
@@ -50,6 +47,9 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "peerDependencies": {
+    "@buildeross/constants": "0.1.3",
+    "@buildeross/ipfs-service": "0.1.3",
+    "@buildeross/types": "0.1.3",
     "viem": "^2.30.0",
     "wagmi": "^2.15.4",
     "yup": "^1.6.1"
