--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -52,6 +52,7 @@
     "multiformats": "^13.3.6",
     "next": "^15.3.2",
     "nextjs-progressbar": "^0.0.16",
+    "papaparse": "^5.5.3",
     "raw-loader": "^4.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -78,6 +79,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^22.15.21",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
     "@types/testing-library__jest-dom": "^6.0.0",
