--- a/packages/zord/package.json
+++ b/packages/zord/package.json
@@ -58,9 +58,8 @@
     "build": "tsup",
     "build-icons": "svgr --out-dir src/icons --icon --replace-attr-values '#000=currentColor' --typescript icons ",
     "clean": "rm -rf .turbo dist",
-    "dev": "tsup --watch",
-    "dev:types": "tsc --emitDeclarationOnly --declaration --declarationMap",
-    "lint": "eslint src --fix"
+    "lint": "eslint src --fix",
+    "type-check": "tsc --noEmit"
   },
   "sideEffects": [
     "./dist/index.css"
