--- a/packages/constants/tsconfig.json
+++ b/packages/constants/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@buildeross/tsconfig/base.json",
   "compilerOptions": {
+    "types": ["node", "@buildeross/types/globals"],
     "outDir": "./dist",
     "declaration": true,
     "declarationMap": true
