--- a/packages/analytics/package.json
+++ b/packages/analytics/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@buildeross/eslint-config-custom": "workspace:*",
     "@buildeross/tsconfig": "workspace:*",
+    "@types/node": "^22.15.21",
     "@types/react": "^19.1.5",
     "eslint": "8.57.1",
     "tsup": "^8.3.5",
