feat: change BASE_URL to a build time variable + rename env variable

--- a/turbo.json
+++ b/turbo.json
@@ -30,7 +30,8 @@
     "TENDERLY_ACCESS_KEY",
     "NODE_ENV",
     "VERCEL_PROJECT_PRODUCTION_URL",
-    "BASE_URL"
+    "BUILDEROSS_BASE_URL",
+    "BUILDEROSS_APP_ENV"
   ],
   "tasks": {
     "build": {
