--- a/packages/ipfs-service/package.json
+++ b/packages/ipfs-service/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.3",
   "dependencies": {
     "@biglup/is-cid": "^1.0.3",
+    "@buildeross/constants": "workspace:*",
     "sha.js": "^2.4.12"
   },
   "devDependencies": {
@@ -21,6 +22,9 @@
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
     }
+  },
+  "peerDependencies": {
+    "@buildeross/constants": "0.1.3"
   },
   "files": [
     "dist/**/*",
