fix: updated config/deps to fix app build with auction-ui

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -11,6 +11,8 @@
     "noUnusedLocals": false,
     "skipLibCheck": true,
     "noUnusedParameters": false,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "types": ["@testing-library/jest-dom", "vitest/globals", "@buildeross/types/globals"],
     "plugins": [
       {
