--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -51,6 +51,7 @@
     "sharp": "^0.34.2",
     "swr": "^2.3.3",
     "viem": "^2.30.0",
+    "wagmi": "^2.15.4",
     "yup": "^1.6.1",
     "zustand": "^5.0.4"
   },
