--- a/packages/stores/package.json
+++ b/packages/stores/package.json
@@ -2,11 +2,8 @@
   "name": "@buildeross/stores",
   "description": "State management stores for BuilderOSS apps",
   "version": "0.1.3",
-  "dependencies": {
-    "@buildeross/constants": "workspace:*",
-    "zustand": "^5.0.4"
-  },
   "devDependencies": {
+    "@buildeross/constants": "workspace:*",
     "@buildeross/eslint-config-custom": "workspace:*",
     "@buildeross/tsconfig": "workspace:*",
     "@buildeross/types": "workspace:*",
@@ -15,7 +12,8 @@
     "eslint": "8.57.1",
     "react": "^19.1.0",
     "tsup": "^8.3.5",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "zustand": "^5.0.4"
   },
   "exports": {
     ".": {
