--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
     name: CI
     runs-on: ubuntu-latest
     env:
+      NODE_OPTIONS: --max-old-space-size=4096
+      TURBO_CONCURRENCY: 1
       ANVIL_BLOCK_NUMBER: 16522514
       ANVIL_FORK_URL: ${{ secrets.MAINNET_RPC_URL }}
     steps:
@@ -29,7 +31,7 @@ jobs:
           node-version: 22
 
       - name: 💾 Cache node_modules
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         id: cache-node-modules
         with:
           path: |
@@ -48,6 +50,9 @@ jobs:
         with:
           path: ~/.foundry/cache/rpc/**/${{ env.ANVIL_BLOCK_NUMBER }}
           key: foundry-anvil-${{ env.ANVIL_BLOCK_NUMBER }}
+
+      - name: 👾 Run build task
+        run: pnpm build:packages
 
       - name: 👾 Run lint task
         run: pnpm lint
@@ -69,7 +74,7 @@ jobs:
           version: nightly
 
       - name: 🚀 Launch Anvil
-        run: anvil --fork-url $ANVIL_FORK_URL --fork-block-number $ANVIL_BLOCK_NUMBER &
+        run: anvil --fork-url $ANVIL_FORK_URL --fork-block-number $ANVIL_BLOCK_NUMBER --no-storage-caching &
 
       - name: 👾 Run test task
         run: pnpm test
