--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -4,7 +4,7 @@
     "allowSyntheticDefaultImports": true,
     "outDir": "./dist",
     "declaration": true,
-    "declarationMap": true,
+    "declarationMap": false,
     "jsx": "react-jsx",
     "moduleResolution": "bundler",
     "types": ["@testing-library/jest-dom", "vitest/globals"]
