--- a/packages/ui/tsconfig.build.json
+++ b/packages/ui/tsconfig.build.json
@@ -7,5 +7,5 @@
     "outDir": "dist/types",
     "tsBuildInfoFile": "tsconfig.build.tsbuildinfo"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*"]
 }
