--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
-auto-install-peers = true
-shared-workspace-lockfile = true
+auto-install-peers=true
+shared-workspace-lockfile=true
 dedupe-peer-dependents=true
 resolve-peers-from-workspace-root=true
 strict-peer-dependencies=false
