--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,6 +8,7 @@
     "@buildeross/constants": "workspace:*",
     "@buildeross/hooks": "workspace:*",
     "@buildeross/ipfs-service": "workspace:*",
+    "@buildeross/proposal-ui": "workspace:*",
     "@buildeross/sdk": "workspace:*",
     "@buildeross/stores": "workspace:*",
     "@buildeross/types": "workspace:*",
@@ -23,7 +24,7 @@
     "@rainbow-me/rainbowkit": "^2.2.5",
     "@sentry/nextjs": "^9.22.0",
     "@smartinvoicexyz/types": "^0.1.27",
-    "@tanstack/react-query": "^5.76.1",
+    "@tanstack/react-query": "^5.90.3",
     "@vanilla-extract/next-plugin": "^2.4.11",
     "@vanilla-extract/recipes": "^0.5.7",
     "@vercel/og": "^0.6.8",
@@ -32,26 +33,26 @@
     "@walletconnect/utils": "2.11.3",
     "@walletconnect/web3wallet": "1.10.3",
     "alchemy-sdk": "^3.6.0",
-    "axios": "^1.9.0",
+    "axios": "^1.12.2",
     "bs58": "^6.0.0",
     "dayjs": "^1.11.13",
     "flatpickr": "^4.6.13",
     "formik": "^2.4.6",
     "framer-motion": "^12.12.1",
     "html-react-parser": "^5.2.5",
-    "ioredis": "^5.6.1",
+    "ioredis": "5.8.1",
     "lanyard": "^1.1.2",
     "lodash": "^4.17.21",
     "next": "^15.3.2",
     "nextjs-progressbar": "^0.0.16",
     "papaparse": "^5.5.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-mde": "^11.5.0",
     "sharp": "^0.34.2",
     "swr": "^2.3.3",
-    "viem": "^2.30.0",
-    "wagmi": "^2.15.4",
+    "viem": "2.38.2",
+    "wagmi": "2.18.1",
     "yup": "^1.6.1",
     "zustand": "^5.0.4"
   },
@@ -67,7 +68,7 @@
     "@types/lodash": "^4.17.17",
     "@types/node": "^22.15.21",
     "@types/papaparse": "^5.3.16",
-    "@types/react": "^19.1.5",
+    "@types/react": "19.2.2",
     "@types/react-dom": "^19.1.5",
     "@types/testing-library__jest-dom": "^6.0.0",
     "@vanilla-extract/css": "^1.17.2",
