--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -17,7 +17,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^22.15.21",
-    "@types/react": "^19.1.5",
+    "@types/react": "19.2.2",
     "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react": "^4.5.0",
     "eslint": "8.57.1",
@@ -53,11 +53,11 @@
     "@buildeross/types": "0.1.3",
     "@buildeross/utils": "0.1.3",
     "@types/lodash": "^4.17.17",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "swr": "^2.3.3",
-    "viem": "^2.30.0",
-    "wagmi": "^2.15.4"
+    "viem": "2.38.2",
+    "wagmi": "2.18.1"
   },
   "publishConfig": {
     "access": "public"
