--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -25,7 +25,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^22.15.21",
-    "@types/react": "^19.1.5",
+    "@types/react": "19.2.2",
     "@types/react-dom": "^19.1.5",
     "@types/react-portal": "^4.0.7",
     "@vanilla-extract/esbuild-plugin": "^2.3.16",
@@ -35,8 +35,8 @@
     "formik": "^2.4.6",
     "framer-motion": "^12.12.1",
     "jsdom": "^26.1.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "tsup": "^8.3.5",
     "typescript": "^5.8.3",
     "vitest": "^3.1.4"
@@ -78,11 +78,11 @@
     "flatpickr": "^4.6.13",
     "formik": "^2.4.6",
     "framer-motion": "^12.12.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-mde": "^11.5.0",
-    "viem": "^2.30.0",
-    "wagmi": "^2.15.4"
+    "viem": "2.38.2",
+    "wagmi": "2.18.1"
   },
   "publishConfig": {
     "access": "public"
@@ -102,5 +102,5 @@
     "test:watch": "vitest",
     "type-check": "tsc --noEmit"
   },
-  "types": "./dist/index.d.ts"
+  "types": "./dist/types/index.d.ts"
 }
