--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -54,8 +54,8 @@
     "@buildeross/constants": "0.1.3",
     "@buildeross/ipfs-service": "0.1.3",
     "@buildeross/types": "0.1.3",
-    "viem": "^2.30.0",
-    "wagmi": "^2.15.4",
+    "viem": "2.38.2",
+    "wagmi": "2.18.1",
     "yup": "^1.6.1"
   },
   "publishConfig": {
