fix: updated eslint config + fixed errors

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -60,6 +60,7 @@
   "devDependencies": {
     "@buildeross/eslint-config-custom": "workspace:*",
     "@buildeross/tsconfig": "workspace:*",
+    "@eslint/eslintrc": "^3.3.1",
     "@next/bundle-analyzer": "^15.3.2",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/dom": "^10.4.0",
@@ -77,6 +78,7 @@
     "@vitejs/plugin-react": "^4.5.0",
     "dotenv": "^16.5.0",
     "eslint": "8.57.1",
+    "eslint-config-next": "*",
     "jsdom": "^26.1.0",
     "localtunnel": "^2.0.2",
     "raw-loader": "^4.0.2",
@@ -92,7 +94,7 @@
     "build": "next build",
     "clean": "rm -rf .next .turbo",
     "dev": "NODE_OPTIONS='--max-old-space-size=4096' next dev",
-    "lint": "pnpm type-check && next lint --fix",
+    "lint": "pnpm type-check && eslint --fix .",
     "start": "next start",
     "test": "vitest run",
     "test:watch": "vitest",
