--- a/turbo.json
+++ b/turbo.json
@@ -2,6 +2,7 @@
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
   "globalEnv": [
+    "ANALYZE",
     "PINATA_API_KEY",
     "NEXT_PUBLIC_PINATA_GATEWAY",
     "REDIS_URL",
