--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,6 +6,7 @@
     "@buildeross/auction-ui": "workspace:*",
     "@buildeross/blocklist": "workspace:*",
     "@buildeross/constants": "workspace:*",
+    "@buildeross/create-dao-ui": "workspace:*",
     "@buildeross/create-proposal-ui": "workspace:*",
     "@buildeross/dao-ui": "workspace:*",
     "@buildeross/hooks": "workspace:*",
