--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,7 +18,6 @@
     "@buildeross/ui": "workspace:*",
     "@buildeross/utils": "workspace:*",
     "@buildeross/zord": "workspace:*",
-    "@ethereum-attestation-service/eas-sdk": "^2.7.0",
     "@farcaster/frame-sdk": "^0.0.50",
     "@farcaster/frame-wagmi-connector": "^0.0.39",
     "@farcaster/hub-nodejs": "^0.13.5",
@@ -31,33 +30,22 @@
     "@vanilla-extract/next-plugin": "^2.4.11",
     "@vanilla-extract/recipes": "^0.5.7",
     "@vercel/og": "^0.6.8",
-    "@walletconnect/core": "2.11.3",
     "@walletconnect/types": "2.11.3",
-    "@walletconnect/utils": "2.11.3",
-    "@walletconnect/web3wallet": "1.10.3",
     "alchemy-sdk": "^3.6.0",
     "axios": "^1.12.2",
-    "bs58": "^6.0.0",
     "dayjs": "^1.11.13",
     "flatpickr": "^4.6.13",
-    "formik": "^2.4.6",
     "framer-motion": "^12.12.1",
-    "html-react-parser": "^5.2.5",
     "ioredis": "5.8.1",
-    "lanyard": "^1.1.2",
-    "lodash": "^4.17.21",
     "next": "^15.3.2",
     "nextjs-progressbar": "^0.0.16",
-    "papaparse": "^5.5.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-mde": "^11.5.0",
     "sharp": "^0.34.2",
     "swr": "^2.3.3",
     "viem": "2.38.2",
-    "wagmi": "2.18.1",
-    "yup": "^1.6.1",
-    "zustand": "^5.0.4"
+    "wagmi": "2.18.1"
   },
   "devDependencies": {
     "@buildeross/eslint-config-custom": "workspace:*",
@@ -90,6 +78,7 @@
     "vitest": "^3.1.4"
   },
   "license": "MIT",
+  "packageManager": "pnpm@10.13.1",
   "private": true,
   "scripts": {
     "analyze": "ANALYZE=true next build",
