--- a/packages/auction-ui/package.json
+++ b/packages/auction-ui/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@vanilla-extract/css": "^1.17.2",
     "axios": "^1.12.2",
-    "dayjs": "^1.11.13"
+    "dayjs": "^1.11.13",
+    "framer-motion": "^12.12.1",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
     "@buildeross/constants": "workspace:*",
@@ -24,7 +26,6 @@
     "@types/react-dom": "^19.1.5",
     "@vanilla-extract/esbuild-plugin": "^2.3.16",
     "eslint": "8.57.1",
-    "swr": "^2.3.3",
     "tsup": "^8.3.5",
     "typescript": "^5.8.3"
   },
@@ -54,10 +55,8 @@
     "@buildeross/ui": "0.1.3",
     "@buildeross/utils": "0.1.3",
     "@buildeross/zord": "0.1.3",
-    "framer-motion": "^12.12.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "swr": "^2.3.3",
     "viem": "2.38.2",
     "wagmi": "2.18.1"
   },
