--- a/packages/create-dao-ui/package.json
+++ b/packages/create-dao-ui/package.json
@@ -6,7 +6,12 @@
     "@vanilla-extract/css": "^1.17.2",
     "axios": "^1.12.2",
     "dayjs": "^1.11.13",
-    "lodash": "^4.17.21"
+    "formik": "^2.4.6",
+    "framer-motion": "^12.12.1",
+    "lodash": "^4.17.21",
+    "swr": "^2.3.3",
+    "yup": "^1.6.1",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@buildeross/constants": "workspace:*",
@@ -64,15 +69,10 @@
     "@buildeross/utils": "0.1.3",
     "@buildeross/zord": "0.1.3",
     "@sentry/nextjs": "^9.22.0",
-    "formik": "^2.4.6",
-    "framer-motion": "^12.12.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "swr": "^2.3.3",
     "viem": "2.38.2",
-    "wagmi": "2.18.1",
-    "yup": "^1.6.1",
-    "zustand": "^5.0.4"
+    "wagmi": "2.18.1"
   },
   "peerDependenciesMeta": {
     "@sentry/nextjs": {
@@ -91,8 +91,6 @@
     "build": "tsup",
     "clean": "rm -rf .turbo dist",
     "lint": "eslint src --fix",
-    "test": "vitest run",
-    "test:watch": "vitest",
     "type-check": "tsc --noEmit"
   },
   "types": "./dist/index.d.ts"
