--- a/packages/dao-ui/package.json
+++ b/packages/dao-ui/package.json
@@ -6,8 +6,12 @@
     "@vanilla-extract/css": "^1.17.2",
     "axios": "^1.12.2",
     "dayjs": "^1.11.13",
+    "formik": "^2.4.6",
+    "framer-motion": "^12.12.1",
     "html-react-parser": "^5.2.5",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "swr": "^2.3.3",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@buildeross/constants": "workspace:*",
@@ -67,14 +71,10 @@
     "@buildeross/ui": "0.1.3",
     "@buildeross/utils": "0.1.3",
     "@buildeross/zord": "0.1.3",
-    "formik": "^2.4.6",
-    "framer-motion": "^12.12.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "swr": "^2.3.3",
     "viem": "2.38.2",
-    "wagmi": "2.18.1",
-    "yup": "^1.6.1"
+    "wagmi": "2.18.1"
   },
   "publishConfig": {
     "access": "public"
