--- a/packages/stores/package.json
+++ b/packages/stores/package.json
@@ -2,6 +2,9 @@
   "name": "@buildeross/stores",
   "description": "State management stores for BuilderOSS apps",
   "version": "0.1.3",
+  "dependencies": {
+    "zustand": "^5.0.4"
+  },
   "devDependencies": {
     "@buildeross/constants": "workspace:*",
     "@buildeross/eslint-config-custom": "workspace:*",
@@ -33,8 +36,7 @@
   "peerDependencies": {
     "@buildeross/constants": "0.1.3",
     "@buildeross/types": "0.1.3",
-    "react": "19.2.0",
-    "zustand": "^5.0.4"
+    "react": "19.2.0"
   },
   "publishConfig": {
     "access": "public"
