--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "private": true,
   "scripts": {
-    "anvil": "bash -c 'source .env.local && anvil --fork-url \"$ANVIL_FORK_URL\" --fork-block-number \"$ANVIL_BLOCK_NUMBER\"' --no-storage-caching --steps-tracing false",
+    "anvil": "bash -c 'source .env.local && anvil --fork-url \"$ANVIL_FORK_URL\" --fork-block-number \"$ANVIL_BLOCK_NUMBER\"'",
     "build": "turbo run build",
     "build:packages": "turbo run build --filter=@buildeross/*",
     "changeset": "changeset",
