--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -25,7 +25,9 @@
     "swr": "^2.3.3",
     "tsup": "^8.3.5",
     "typescript": "^5.8.3",
-    "vitest": "^3.1.4"
+    "viem": "2.38.2",
+    "vitest": "^3.1.4",
+    "wagmi": "2.18.1"
   },
   "exports": {
     ".": {
