--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,16 +36,16 @@
     "dayjs": "^1.11.13",
     "flatpickr": "^4.6.13",
     "framer-motion": "^12.12.1",
-    "ioredis": "5.8.1",
+    "ioredis": "^5.8.1",
     "next": "^15.3.2",
     "nextjs-progressbar": "^0.0.16",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-mde": "^11.5.0",
     "sharp": "^0.34.2",
     "swr": "^2.3.3",
-    "viem": "2.38.2",
-    "wagmi": "2.18.1"
+    "viem": "^2.38.2",
+    "wagmi": "^2.18.1"
   },
   "devDependencies": {
     "@buildeross/eslint-config-custom": "workspace:*",
@@ -60,7 +60,7 @@
     "@types/lodash": "^4.17.17",
     "@types/node": "^22.15.21",
     "@types/papaparse": "^5.3.16",
-    "@types/react": "19.2.2",
+    "@types/react": "^19.2.2",
     "@types/react-dom": "^19.1.5",
     "@types/testing-library__jest-dom": "^6.0.0",
     "@vanilla-extract/css": "^1.17.2",
