--- a/package.json
+++ b/package.json
@@ -4,32 +4,32 @@
   "devDependencies": {
     "@buildeross/eslint-config-custom": "workspace:*",
     "@changesets/cli": "^2.29.5",
-    "@tanstack/query-core": "5.90.3",
+    "@tanstack/query-core": "^5.90.3",
     "@tanstack/react-query": "^5.90.3",
-    "@types/react": "19.2.2",
+    "@types/react": "^19.2.2",
     "eslint": "8.57.1",
     "husky": "^8.0.3",
-    "ioredis": "5.8.1",
+    "ioredis": "^5.8.1",
     "prettier": "3.5.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "syncpack": "^13.0.4",
     "turbo": "2.5.5",
-    "viem": "2.38.2",
-    "wagmi": "2.18.1",
-    "zod": "4.1.12"
+    "viem": "^2.38.2",
+    "wagmi": "^2.18.1",
+    "zod": "^4.1.12"
   },
   "packageManager": "pnpm@10.13.1",
   "pnpm": {
     "overrides": {
-      "react": "19.2.0",
-      "react-dom": "19.2.0",
-      "@types/react": "19.2.2",
-      "wagmi": "2.18.1",
-      "viem": "2.38.2",
-      "zod": "4.1.12",
-      "ioredis": "5.8.1",
-      "@tanstack/query-core": "5.90.3",
+      "react": "^19.2.0",
+      "react-dom": "^19.2.0",
+      "@types/react": "^19.2.2",
+      "wagmi": "^2.18.1",
+      "viem": "^2.38.2",
+      "zod": "^4.1.12",
+      "ioredis": "^5.8.1",
+      "@tanstack/query-core": "^5.90.3",
       "@tanstack/react-query": "^5.90.3"
     }
   },
