--- a/packages/auction-ui/package.json
+++ b/packages/auction-ui/package.json
@@ -22,7 +22,7 @@
     "@buildeross/utils": "workspace:*",
     "@buildeross/zord": "workspace:*",
     "@types/node": "^22.15.21",
-    "@types/react": "19.2.2",
+    "@types/react": "^19.2.2",
     "@types/react-dom": "^19.1.5",
     "@vanilla-extract/esbuild-plugin": "^2.3.16",
     "eslint": "8.57.1",
@@ -55,10 +55,10 @@
     "@buildeross/ui": "0.1.3",
     "@buildeross/utils": "0.1.3",
     "@buildeross/zord": "0.1.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "viem": "2.38.2",
-    "wagmi": "2.18.1"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "viem": "^2.38.2",
+    "wagmi": "^2.18.1"
   },
   "publishConfig": {
     "access": "public"
