--- a/packages/constants/package.json
+++ b/packages/constants/package.json
@@ -33,7 +33,7 @@
   "module": "./dist/index.mjs",
   "peerDependencies": {
     "@buildeross/types": "0.1.3",
-    "wagmi": "2.18.1"
+    "wagmi": "^2.18.1"
   },
   "publishConfig": {
     "access": "public"
