--- a/packages/create-proposal-ui/package.json
+++ b/packages/create-proposal-ui/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@ethereum-attestation-service/eas-sdk": "^2.7.0",
     "@vanilla-extract/css": "^1.17.2",
-    "@walletconnect/core": "2.11.3",
-    "@walletconnect/utils": "2.11.3",
-    "@walletconnect/web3wallet": "1.10.3",
+    "@walletconnect/core": "^2.11.3",
+    "@walletconnect/utils": "^2.11.3",
+    "@walletconnect/web3wallet": "^1.10.3",
     "axios": "^1.12.2",
     "bs58": "^6.0.0",
     "dayjs": "^1.11.13",
@@ -40,7 +40,7 @@
     "@types/lodash": "^4.17.17",
     "@types/node": "^22.15.21",
     "@types/papaparse": "^5.3.16",
-    "@types/react": "19.2.2",
+    "@types/react": "^19.2.2",
     "@types/react-dom": "^19.1.5",
     "@vanilla-extract/esbuild-plugin": "^2.3.16",
     "@vanilla-extract/vite-plugin": "^5.0.2",
@@ -80,10 +80,10 @@
     "@buildeross/utils": "0.1.3",
     "@buildeross/zord": "0.1.3",
     "@sentry/nextjs": "^9.22.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "viem": "2.38.2",
-    "wagmi": "2.18.1"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "viem": "^2.38.2",
+    "wagmi": "^2.18.1"
   },
   "peerDependenciesMeta": {
     "@sentry/nextjs": {
