--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -62,8 +62,8 @@
     "@buildeross/types": "0.1.3",
     "@buildeross/utils": "0.1.3",
     "@sentry/nextjs": "^9.22.0",
-    "viem": "2.38.2",
-    "wagmi": "2.18.1"
+    "viem": "^2.38.2",
+    "wagmi": "^2.18.1"
   },
   "peerDependenciesMeta": {
     "@sentry/nextjs": {
