--- a/packages/stores/package.json
+++ b/packages/stores/package.json
@@ -11,9 +11,9 @@
     "@buildeross/tsconfig": "workspace:*",
     "@buildeross/types": "workspace:*",
     "@types/node": "^22.15.21",
-    "@types/react": "19.2.2",
+    "@types/react": "^19.2.2",
     "eslint": "8.57.1",
-    "react": "19.2.0",
+    "react": "^19.2.0",
     "tsup": "^8.3.5",
     "typescript": "^5.8.3",
     "zustand": "^5.0.4"
@@ -36,7 +36,7 @@
   "peerDependencies": {
     "@buildeross/constants": "0.1.3",
     "@buildeross/types": "0.1.3",
-    "react": "19.2.0"
+    "react": "^19.2.0"
   },
   "publishConfig": {
     "access": "public"
