--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -29,7 +29,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^22.15.21",
-    "@types/react": "19.2.2",
+    "@types/react": "^19.2.2",
     "@types/react-dom": "^19.1.5",
     "@types/react-portal": "^4.0.7",
     "@vanilla-extract/esbuild-plugin": "^2.3.16",
@@ -39,8 +39,8 @@
     "formik": "^2.4.6",
     "framer-motion": "^12.12.1",
     "jsdom": "^26.1.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "tsup": "^8.3.5",
     "typescript": "^5.8.3",
     "vitest": "^3.1.4"
@@ -79,10 +79,10 @@
     "@buildeross/types": "0.1.3",
     "@buildeross/utils": "0.1.3",
     "@buildeross/zord": "0.1.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "viem": "2.38.2",
-    "wagmi": "2.18.1"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "viem": "^2.38.2",
+    "wagmi": "^2.18.1"
   },
   "publishConfig": {
     "access": "public"
