--- a/packages/zord/package.json
+++ b/packages/zord/package.json
@@ -17,14 +17,14 @@
     "@buildeross/tsconfig": "workspace:*",
     "@svgr/cli": "^6.5.1",
     "@types/lodash-es": "^4.17.6",
-    "@types/react": "19.2.2",
+    "@types/react": "^19.2.2",
     "@types/react-dom": "^19.1.5",
     "@vanilla-extract/esbuild-plugin": "^2.3.16",
     "esbuild-plugin-svgr": "^3.1.1",
     "eslint": "8.57.1",
     "lodash-es": "^4.17.21",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "tsup": "^8.3.5",
     "typescript": "^5.8.3"
   },
@@ -43,8 +43,8 @@
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "peerDependencies": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "publishConfig": {
     "access": "public"
