feat: refactor api endpoints + disallow cors for simulate / pinata

--- a/turbo.json
+++ b/turbo.json
@@ -4,12 +4,13 @@
   "globalEnv": [
     "ANALYZE",
     "PINATA_API_KEY",
-    "NEXT_PUBLIC_PINATA_GATEWAY",
+    "COINGECKO_API_KEY",
     "REDIS_URL",
     "ETHERSCAN_API_KEY",
+    "NEXT_PUBLIC_SKIP_TENDERLY_SIMULATION",
+    "NEXT_PUBLIC_PINATA_GATEWAY",
     "NEXT_PUBLIC_UPLOAD_API",
     "NEXT_PUBLIC_IPFS_UPLOAD_API",
-    "NEXT_PUBLIC_COINGECKO_API_KEY",
     "NEXT_PUBLIC_TENDERLY_RPC_KEY",
     "NEXT_PUBLIC_IPFS_GATEWAY",
     "NEXT_PUBLIC_SENTRY_DSN",
