fix: fixed env vars in turbo.json

--- a/apps/web/.env.local.example
+++ b/apps/web/.env.local.example
@@ -3,11 +3,10 @@
 # these run `npx vercel env pull .env.local`
 
 ETHERSCAN_API_KEY=
-PRIVATE_REDIS_CONNECTION_URI=
+REDIS_URL=
 
 NEXT_PUBLIC_INFURA_API_KEY=
 NEXT_PUBLIC_ALCHEMY_API_KEY=
-NEXT_PUBLIC_COINGECKO_API_KEY=
 NEXT_PUBLIC_TENDERLY_RPC_KEY=
 
 NEXT_PUBLIC_NETWORK_TYPE=mainnet/testnet
