feat: enable ai summaries for proposal txs

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,6 +2,7 @@
   "name": "nouns-builder",
   "version": "0.0.0",
   "dependencies": {
+    "@ai-sdk/gateway": "^2.0.0",
     "@buildeross/analytics": "workspace:*",
     "@buildeross/auction-ui": "workspace:*",
     "@buildeross/blocklist": "workspace:*",
@@ -31,6 +32,7 @@
     "@vanilla-extract/recipes": "^0.5.7",
     "@vercel/og": "^0.6.8",
     "@walletconnect/types": "2.11.3",
+    "ai": "^5.0.76",
     "alchemy-sdk": "^3.6.0",
     "axios": "^1.12.2",
     "dayjs": "^1.11.13",
@@ -68,7 +70,7 @@
     "@vitejs/plugin-react": "^4.5.0",
     "dotenv": "^16.5.0",
     "eslint": "8.57.1",
-    "eslint-config-next": "*",
+    "eslint-config-next": "15.5.5",
     "jsdom": "^26.1.0",
     "localtunnel": "^2.0.2",
     "raw-loader": "^4.0.2",
