--- a/turbo.json
+++ b/turbo.json
@@ -7,6 +7,8 @@
     "COINGECKO_API_KEY",
     "REDIS_URL",
     "ETHERSCAN_API_KEY",
+    "AI_GATEWAY_API_KEY",
+    "AI_MODEL",
     "NEXT_PUBLIC_SKIP_TENDERLY_SIMULATION",
     "NEXT_PUBLIC_PINATA_GATEWAY",
     "NEXT_PUBLIC_TENDERLY_RPC_KEY",
