feat: add eas revoke handlers

--- a/apps/subgraph/abis/EAS.json
+++ b/apps/subgraph/abis/EAS.json
@@ -231,7 +231,7 @@
     "outputs": [
       { "internalType": "contract ISchemaRegistry", "name": "", "type": "address" }
     ],
-    "stateMutability": "pure",
+    "stateMutability": "view",
     "type": "function"
   },
   {
