fix: fixed types + removed unnecessary long running tests

--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -72,7 +72,7 @@
   "scripts": {
     "build": "tsup",
     "clean": "rm -rf dist .turbo",
-    "lint": "eslint src --fix",
+    "lint": "pnpm type-check && eslint src --fix",
     "test": "vitest run",
     "test:watch": "vitest",
     "type-check": "tsc --noEmit"
