--- a/packages/blocklist/package.json
+++ b/packages/blocklist/package.json
@@ -42,7 +42,7 @@
   "scripts": {
     "build": "tsup",
     "clean": "rm -rf dist .turbo",
-    "lint": "eslint src --fix",
+    "lint": "pnpm type-check && eslint src --fix",
     "type-check": "tsc --noEmit",
     "update": "./update_sdnlist.sh"
   },
