--- a/packages/constants/package.json
+++ b/packages/constants/package.json
@@ -46,7 +46,7 @@
   "scripts": {
     "build": "tsup",
     "clean": "rm -rf dist .turbo",
-    "lint": "eslint src --fix",
+    "lint": "pnpm type-check && eslint src --fix",
     "type-check": "tsc --noEmit"
   },
   "types": "./dist/index.d.ts"
