--- a/packages/create-dao-ui/package.json
+++ b/packages/create-dao-ui/package.json
@@ -89,7 +89,7 @@
   "scripts": {
     "build": "tsup",
     "clean": "rm -rf .turbo dist",
-    "lint": "eslint src --fix",
+    "lint": "pnpm type-check && eslint src --fix",
     "type-check": "tsc --noEmit"
   },
   "types": "./dist/index.d.ts"
