--- a/packages/create-proposal-ui/package.json
+++ b/packages/create-proposal-ui/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@ethereum-attestation-service/eas-sdk": "^2.7.0",
     "@vanilla-extract/css": "^1.17.2",
-    "@walletconnect/core": "^2.11.3",
-    "@walletconnect/utils": "^2.11.3",
-    "@walletconnect/web3wallet": "^1.10.3",
+    "@walletconnect/types": "2.11.3",
+    "@walletconnect/core": "2.11.3",
+    "@walletconnect/utils": "2.11.3",
+    "@walletconnect/web3wallet": "1.10.3",
+"@smartinvoicexyz/types": "^0.1.27",
     "axios": "^1.12.2",
     "bs58": "^6.0.0",
     "dayjs": "^1.11.13",
@@ -100,7 +102,7 @@
   "scripts": {
     "build": "tsup",
     "clean": "rm -rf .turbo dist",
-    "lint": "eslint src --fix",
+    "lint": "pnpm type-check && eslint src --fix",
     "test": "vitest run",
     "test:watch": "vitest",
     "type-check": "tsc --noEmit"
