--- a/packages/dao-ui/package.json
+++ b/packages/dao-ui/package.json
@@ -85,7 +85,7 @@
   "scripts": {
     "build": "tsup",
     "clean": "rm -rf .turbo dist",
-    "lint": "eslint src --fix",
+    "lint": "pnpm type-check && eslint src --fix",
     "test": "vitest run",
     "test:watch": "vitest",
     "type-check": "tsc --noEmit"
