--- a/packages/ipfs-service/package.json
+++ b/packages/ipfs-service/package.json
@@ -49,7 +49,7 @@
   "scripts": {
     "build": "tsup",
     "clean": "rm -rf dist .turbo",
-    "lint": "eslint src --fix",
+    "lint": "pnpm type-check && eslint src --fix",
     "test": "vitest run",
     "type-check": "tsc --noEmit"
   },
