--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -41,7 +41,7 @@
   "scripts": {
     "build": "tsup",
     "clean": "rm -rf dist .turbo",
-    "lint": "eslint src --fix",
+    "lint": "pnpm type-check && eslint src --fix",
     "postbuild": "cp src/globals.d.ts dist/",
     "type-check": "tsc --noEmit"
   },
