--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -70,7 +70,7 @@
   "scripts": {
     "build": "tsup",
     "clean": "rm -rf dist .turbo",
-    "lint": "eslint src --fix",
+    "lint": "pnpm type-check && eslint src --fix",
     "test": "vitest run",
     "test:watch": "vitest",
     "type-check": "tsc --noEmit"
