feat: support zora creator/content coin deployment

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -32,11 +32,14 @@
     "@vanilla-extract/next-plugin": "^2.4.11",
     "@vanilla-extract/recipes": "^0.5.7",
     "@vercel/og": "^0.6.8",
+    "@zoralabs/coins-sdk": "^0.3.3",
+    "@zoralabs/protocol-deployments": "^0.6.4",
     "ai": "^5.0.76",
     "alchemy-sdk": "^3.6.0",
     "axios": "^1.12.2",
     "dayjs": "^1.11.13",
     "flatpickr": "^4.6.13",
+    "formik": "^2.4.6",
     "framer-motion": "^12.12.1",
     "ioredis": "^5.8.1",
     "next": "^15.5.9",
