--- a/turbo.json
+++ b/turbo.json
@@ -21,6 +21,7 @@
     "NEXT_PUBLIC_GOLDSKY_PROJECT_ID",
     "NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID",
     "NEXT_PUBLIC_WALLET_CONNECT_METADATA",
+    "NEXT_PUBLIC_ZORA_COINS_SDK_API_KEY",
     "SENTRY_DSN",
     "SENTRY_ORG",
     "SENTRY_PROJECT",
