--- a/packages/create-proposal-ui/package.json
+++ b/packages/create-proposal-ui/package.json
@@ -10,6 +10,8 @@
     "@walletconnect/types": "2.11.3",
     "@walletconnect/utils": "2.11.3",
     "@walletconnect/web3wallet": "1.10.3",
+    "@zoralabs/coins-sdk": "^0.3.3",
+    "@zoralabs/protocol-deployments": "^0.6.4",
     "axios": "^1.12.2",
     "bs58": "^6.0.0",
     "dayjs": "^1.11.13",
