fix: misc fixes with stream details

--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -4,6 +4,7 @@
     "outDir": "./dist",
     "declaration": true,
     "declarationMap": true,
+    "moduleResolution": "bundler",
     "types": [
       "vitest/globals"
     ],
