--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -14,6 +14,7 @@
     "@buildeross/tsconfig": "workspace:*",
     "@buildeross/types": "workspace:*",
     "@buildeross/utils": "workspace:*",
+    "@buildeross/swap": "workspace:*",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^22.15.21",
