feat: display zora coin comments

--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -4,6 +4,7 @@
   "version": "0.2.2",
   "dependencies": {
     "@smartinvoicexyz/types": "^0.1.27",
+    "@zoralabs/coins-sdk": "^0.3.3",
     "dayjs": "^1.11.13"
   },
   "devDependencies": {
@@ -11,10 +12,10 @@
     "@buildeross/eslint-config-custom": "workspace:*",
     "@buildeross/ipfs-service": "workspace:*",
     "@buildeross/sdk": "workspace:*",
+    "@buildeross/swap": "workspace:*",
     "@buildeross/tsconfig": "workspace:*",
     "@buildeross/types": "workspace:*",
     "@buildeross/utils": "workspace:*",
-    "@buildeross/swap": "workspace:*",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^22.15.21",
