fix: added corepack env to turbo.json

--- a/turbo.json
+++ b/turbo.json
@@ -34,7 +34,8 @@
     "NODE_ENV",
     "VERCEL_PROJECT_PRODUCTION_URL",
     "BUILDEROSS_BASE_URL",
-    "BUILDEROSS_APP_ENV"
+    "BUILDEROSS_APP_ENV",
+    "ENABLE_EXPERIMENTAL_COREPACK"
   ],
   "tasks": {
     "build": {
