--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -4,7 +4,8 @@
     "outDir": "./dist",
     "declaration": true,
     "declarationMap": true,
-    "module": "es2020"
+    "module": "es2020",
+    "moduleResolution": "Bundler",
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
